<resources>
    <string name="app_name">MaxMovies</string>
    <string name="error_connection">Verifique sua conexão com a internet.</string>
    <string name="movie_cover">Imagem de capa do filme</string>
    <string name="movie_title">Movie Title</string>
    <string name="sub_title">Sub title</string>
    <string name="release_date">Data de Lançamento:</string>
    <string name="rating">Nota: </string>
    <string name="budget">Orçamento: </string>
    <string name="revenue">Receita: </string>
    <string name="overview">Visão geral: </string>
    <string name="background_imagem">background da imagem</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
</resources>