<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.MainActivity">


    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/grayLight"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/layoutprincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/app_title">

        <LinearLayout
            android:id="@+id/layoutsecundario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:layout_marginStart="16dp"
                android:textColor="@color/grayLight"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_movie_popular"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/movie_item" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:layout_marginStart="16dp"
                android:textColor="@color/grayLight"
                android:textSize="20sp" />

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/recycler_view_movie_rated"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="150dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:clipToPadding="false"-->
<!--                android:paddingStart="10dp"-->
<!--                android:orientation="horizontal"-->
<!--                android:paddingEnd="10dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                tools:listitem="@layout/movie_item" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                android:layout_marginStart="16dp"
                android:textColor="@color/grayLight"
                android:textSize="20sp" />

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/recycler_view_movie_upcoming"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="150dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:clipToPadding="false"-->
<!--                android:paddingStart="10dp"-->
<!--                android:orientation="horizontal"-->
<!--                android:paddingEnd="10dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                tools:itemCount="5"-->
<!--                tools:listitem="@layout/movie_item" />-->
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>